Fix bug where navigation on mobile was not positioned correctly

--- a/styles/header.styl
+++ b/styles/header.styl
@@ -34,10 +34,11 @@
       display block
       font-size 18px
       top 0
+      left 0
       width 150px
       margin-top 0
       transform translateX(-100%)
-      transition ease-in-out -webkit-transform .2s
+      transition ease-in-out transform .2s
       flex-direction column
       li:first-child
         display block
